fix focus visibility
:focus {outline: revert} on index.css

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,3 +29,7 @@ Layout {
 .darkMode {
 background-color: #222;
 }
+
+:focus {
+outline: revert;
+}
